--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,3 @@
-fastapi
-uvicorn
 pillow
 python-dotenv
 langchain
@@ -7,3 +5,4 @@ langchain-google-genai
 pydantic-settings
 SQLAlchemy
 mysqlclient
+python-telegram-bot
